--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,5 @@ data/politician-data.csv
 data/politician-data.json
 data/filtered_edge_list
 data/politician_firstname.json
+output_fplus.json
+faceap_out.csv
