--- a/.gitignore
+++ b/.gitignore
@@ -6,4 +6,4 @@ data/politician_firstname.json
 output_fplus.json
 faceap_out.csv
 model/page_views
-model/page_views.json
+model/page_views.jsonpageviews\pagecounts-20151231-230000 
