--- a/.gitignore
+++ b/.gitignore
@@ -8,3 +8,4 @@ faceap_out.csv
 model/page_views
 model/page_views.jsonpageviews\pagecounts-20151231-230000 
 pageviews/files/
+pageviews/filtered_files/
